[package]
name = "google_sheets_api"
version = "0.1.0"
edition = "2021"
authors = ["kaoru <679719+0x6b@users.noreply.github.com>"]

[dependencies]
oauth2 = { version = "4.2.3", features = ["rustls-tls"] }
open = "3.0.2"
reqwest = { version = "0.11.11", features = ["rustls"] }
serde = { version = "1.0.140", features = ["serde_derive"] }
serde_json = "1.0.82"
typed-builder = "0.10.0"
thiserror = "1.0"
chrono = { version = "0.4.19", features = ["serde"] }
google-sheets4 = "3.1.0"
